# pySHOC

./: .gitignore  .pylintrc  LICENSE  README  README.md  ReadNoiseTable.txt  SHOC_ReadoutNoiseTable.txt  SHOC_pre.py  SHOC_user_input.py  __init__.py  airmass.py  calibration.py  core.py  dssmatchtest.py  filenaming.py  fitshead.sh  header.py  install.sh  io.py  irafhacks.py  lc.py  lightcurve.py  lightcurve.py.bak  log.py  misc.py  pipeline.py  pre.py  psf+find.dev.py  pyproject.toml  readnoise.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tests.py  timing.py  treeops.py  utils.py  wcs.py  zscale.py
EMvsCON/: EMvsCON.3.3.py  EMvsCON.3.4.py  EMvsCON.3.5.py
examples/: pySHOC.tut.ipynb
examples/.ipynb_checkpoints/: pySHOC.tut-checkpoint.ipynb
pySHOC/: __init__.py  convert_keywords.py  core.py  fast.py  filenaming.py  header.py  io.py  iraf_hacks.py  lightcurve.py  log.py  nightlog.py  pipeline.py  timing.py  treeops.py  uncertainty.py  utils.py  wcs.py
pySHOC/image/: calibration.py  registration.py
pySHOC/readnoise/: README
pyshoc/: core.py  header.py  timing.py  treeops.py  utils.py
pyshoc/nightlog/: weather.py
pyshoc/readnoise/: __init__.py
shoc/: __init__.py  caldb.py  core.py  header.py  match.py  pprint.py  timing.py  utils.py
shoc/pipeline/: new.py
src/pyshoc/: __init__.py  __main__.py  caldb.py  config.py  config.yaml  core.py  flopzone.py  lightcurve.py  match.py  pprint.py  printing.py  tel_info.py  utils.py  (+1 more)
tests/: conftest.py  pySHOC-demo.py  test_bjd.py  test_caldb.py  test_core.py  test_logging.py  test_timing.py  wcs.py
(+49 files in other folders)
