[metadata]
name = pyshoc
author = Hannes Breytenbach
author_email = hannes@saao.ac.za
description = Data reduction and analysis tools for the Sutherland High Speed Optical Cameras (SHOC) 📷🔭
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/astromancer/pyshoc
project_urls =
    Bug Tracker = https://github.com/astromancer/pyshoc/issues
classifiers = 
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
setup_requires =
  setuptools_scm


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyshoc = pyshoc.pipeline.main:main
# gui_scripts